# PruebaTecnicaTinyBird

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: codacy-analysis.yaml  validation.yaml
app/api/v1/: metrics_api.py
app/config/: configuration.py
app/core/: metrics_manager.py  utils.py  validate_events.py
app/entites/interfaces/: event_validator_interface.py  metrics_interface.py
app/entites/models/: events.py  web_response.py
app/entites/types/: response_type.py
app/entities/interfaces/: event_validator_interface.py  metrics_interface.py
app/entities/models/: events.py  get_metrics.py  product.py  web_response.py
app/entities/types/: event_type.py  metric_response.py  response_type.py
data/: events.json  test_events.json
test/api/v1/: test_metrics.py
test/components/core/: test_metrics_manager.py  test_validate_events.py
test/components/models/: test_events.py  test_product.py
